new feature updates

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
         Reset Score
     </button>
 
-    <button>Auto Play</button>
+    <button class="auto-play-btn" onclick="autoPlay();">Auto Play</button>
 
     <script src="logic.js"></script>
 </body>
